@@ -150,9 +150,6 @@
 			Name="headerz"
 			Filter="*.h">
 			<File
-				RelativePath="..\smapi\api_brow.h">
-			</File>
-			<File
 				RelativePath="..\smapi\api_jam.h">
 			</File>
 			<File
